--- a/1주차 쿼리.md
+++ b/1주차 쿼리.md
@@ -1,33 +1,33 @@
 # 1주차 쿼리
 
 1. 서울시에 위치한 매장리스트를 받고싶어요. 	
-``` SQL 
+``` sql 
 SELECT  *	
   FROM  FS_STORE 	
  WHERE  ADDR LIKE '%서울%'	
 ```	
 2. 온라인 구매내역 (테이블) 추출하고 싶어요. 	
-``` SQL 	
+``` sql 	
 SELECT  *	
   FROM  FS_SALE	
  WHERE  OFF_YN = 'N'	
 ```	
 	
 3. ORDER_DT 주문일 기준으로 2016년 1월 28일의 구매 데이터만 추출하고 싶어요. 	
-``` SQL 	
+``` sql 	
 SELECT  * 	
   FROM  FS_SALES	
  WHERE  DATE_FORMAT(ORDER_DT, '%Y%m%d' ) = '20160128'	
 ```	
 4. ORDER_DT 주문일 기준으로 2016년 1월 28일 ~ 2016년 1월 30일까지 데이터를 보고 싶어요.	
-``` SQL 
+``` sql 
 SELECT  * 	
   FROM  FS_SALES	
  WHERE  DATE_FORMAT(ORDER_DT, '%Y%m%d' ) BETWEEN '20160128' AND '20160130'	
 ```	
 5. ORDER_DT 주문일 기준으로 2016년 1월 28일의 구매 지표를 확인하고 싶어요.  	
 구매자 수, 매출액, 주문건수. 	
-``` SQL 
+``` sql 
 SELECT  COUNT(DISTINCT MEM_NO) 구매자수	
         , SUM(PAYMT_AMT) 매출액	
         , COUNT(DISTINCT ORDER_NO) 주문건수	
@@ -36,7 +36,7 @@ SELECT  COUNT(DISTINCT MEM_NO) 구매자수
 	 AND CAN_YN = 'N' -- 환불건 제외 
 ```	
 6. ORDER_DT 주문일 기준으로 2016년 1월 28일 ~ 2016년 1월 30일까지 구매지표를 확인하고 싶어요. 	
-``` SQL 
+``` sql 
 SELECT  COUNT(DISTINCT MEM_NO) 구매자수	
         , SUM(PAYMT_AMT) 매출액	
         , COUNT(DISTINCT ORDER_NO) 주문건수	
@@ -46,7 +46,7 @@ SELECT  COUNT(DISTINCT MEM_NO) 구매자수
 ```	
 
 * 6-1. 각 일자마다의 구매지표를 확인하고 싶다면? 	
-``` SQL 
+``` sql 
 일자별.	
 SELECT  DATE_FORMAT(ORDER_DT, '%Y%m%d') YMD  	
         , COUNT(DISTINCT MEM_NO) 구매자수 	
@@ -61,7 +61,7 @@ SELECT  DATE_FORMAT(ORDER_DT, '%Y%m%d') YMD
 
   
 7. 2017년도 vs 2018년도의 각 연도별 거래액, 구매자수, 주문건수, 구매상품 수를 나타내주세요. 	
-``` SQL 
+``` sql 
 SELECT  LEFT(YM,4) YY   	
         , COUNT(DISTINCT MEM_NO) 구매자수   	
         , SUM(PAYMT_AMT) 거래액    	
@@ -80,7 +80,7 @@ ___
 
 
 9. 2018년 1월의 환불 고객 수? 	
-``` SQL 
+``` sql 
 SELECT  COUNT(DISTINCT MEM_NO)	
   FROM  FS_SALES	
  WHERE  LEFT(SALES_DY, 6) = '201801'	
@@ -88,7 +88,7 @@ SELECT  COUNT(DISTINCT MEM_NO)
 ```	
 10. 2016년도 VS 2017년도 월별 환불고객 수 비교. 	
 추이가 발생하는가? 	
-``` SQL 
+``` sql 
 SELECT  YM 	
 	    , COUNT(DISTINCT MEM_NO) 환불건수
   FROM  FS_SALE	
@@ -99,7 +99,7 @@ SELECT  YM
     BY  YM 	
 ```	
 11. 환불건 외 각 월의 반품율을 구하고 싶다면. 	
-``` SQL 
+``` sql 
 CASE WHEN 사용. 	
 SELECT  YM 	
         , COUNT(DISTINCT CASE WHEN CAN_YN='Y' THEN ORDER_NO END) 환불건수
@@ -112,7 +112,7 @@ SELECT  YM
 ```	
 12. 유효회원 중 성, 연령별 인구통계학적 특성을 확인하고 싶습니다. 	
 CASE WHEN 사용. 	
-``` SQL 	
+``` sql 	
 SELECT  GD 	
         , CASE WHEN (2021 - BIRTH_YY + 1) >= 60 THEN 'OVER60'	
                ELSE CONCAT(FLOOR((2021 - BIRTH_YY + 1)/5)*5,FLOOR((2021 - BIRTH_YY + 1)/5)*5+5) END AGE	
@@ -134,7 +134,7 @@ SELECT  GD
 그외 회원 중 구매횟수가 1회 이하인 회원을 ‘FUTURE’라는 	
 이름의 고객 군으로 나누어주세요.  	
 
-``` SQL 	
+``` sql 	
 SELECT  CASE WHEN AGE BETWEEN 25 AND 34 THEN 'MZ'	
                WHEN AGE >= 34 THEN 'LOYAL'	
                WHEN IFNULL(ORD_CNT,0) <= 1 THEN 'FUTURE' END GUBUN 	
