--- a/1주차 쿼리.md
+++ b/1주차 쿼리.md
@@ -76,7 +76,6 @@ SELECT  LEFT(YM,4) YY
 ```	
 8. 객단가, 주문단가, 주문건당 상품 수, 상품 평균단가 등을 구해주세요.  	
     * 엑셀 활용. 
-___
 
 
 9. 2018년 1월의 환불 고객 수? 	
@@ -106,13 +105,45 @@ SELECT  YM
         , COUNT(DISTINCT CASE WHEN CAN_YN='N' THEN ORDER_NO END) 구매건수
   FROM  FS_SALE	
  WHERE  1=1	
-	    AND YM BETWEEN '201601' AND '201712'
+ 	AND YM BETWEEN '201601' AND '201712'
  GROUP 	
     BY  YM 	
 ```	
 12. 유효회원 중 성, 연령별 인구통계학적 특성을 확인하고 싶습니다. 	
 CASE WHEN 사용. 	
 ``` sql 	
+SELECT  GD 
+        , CASE WHEN (2021 - BIRTH_YY + 1) >= 60 THEN 'OVER60'   
+               WHEN (2021 - BIRTH_YY + 1) >= 55 THEN '5559'
+               WHEN (2021 - BIRTH_YY + 1) >= 50 THEN '5054'
+               WHEN (2021 - BIRTH_YY + 1) >= 45 THEN '4549'
+               WHEN (2021 - BIRTH_YY + 1) >= 40 THEN '4044'
+               WHEN (2021 - BIRTH_YY + 1) >= 35 THEN '3539'
+               WHEN (2021 - BIRTH_YY + 1) >= 30 THEN '3034'
+               WHEN (2021 - BIRTH_YY + 1) >= 25 THEN '2529'
+               WHEN (2021 - BIRTH_YY + 1) >= 20 THEN '2024'
+               ELSE (2021 - BIRTH_YY + 1) < 20 THEN '~20'
+               ELSE '알수없음' END AGEBAND
+        , COUNT(DISTINCT MEM_NO) N
+  FROM  FS_MEMBER   
+ WHERE  WITHDR_GUBN = 'N'   
+        AND REST_YN = 'N'   
+        AND GD IS NOT NULL  
+ GROUP 
+    BY  GD 
+        , CASE WHEN (2021 - BIRTH_YY + 1) >= 60 THEN 'OVER60'   
+               WHEN (2021 - BIRTH_YY + 1) >= 55 THEN '5559'
+               WHEN (2021 - BIRTH_YY + 1) >= 50 THEN '5054'
+               WHEN (2021 - BIRTH_YY + 1) >= 45 THEN '4549'
+               WHEN (2021 - BIRTH_YY + 1) >= 40 THEN '4044'
+               WHEN (2021 - BIRTH_YY + 1) >= 35 THEN '3539'
+               WHEN (2021 - BIRTH_YY + 1) >= 30 THEN '3034'
+               WHEN (2021 - BIRTH_YY + 1) >= 25 THEN '2529'
+               WHEN (2021 - BIRTH_YY + 1) >= 20 THEN '2024'
+               ELSE (2021 - BIRTH_YY + 1) < 20 THEN '~20'
+               ELSE '알수없음' END 
+
+-- 더 간단하게. FLOOR 활용
 SELECT  GD 	
         , CASE WHEN (2021 - BIRTH_YY + 1) >= 60 THEN 'OVER60'	
                ELSE CONCAT(FLOOR((2021 - BIRTH_YY + 1)/5)*5,FLOOR((2021 - BIRTH_YY + 1)/5)*5+5) END AGE	
